# doosan-robotics

./: .gitmodules  camera_position.txt
common/include/: DRFC.h  DRFL.h  DRFLEx.h  DRFS.h
common/src/: dsr_robot.cpp
common/src/DSR_ROBOT/: DRFC.py  DR_init.py  DSR_ROBOT.py
dsr_control/: CMakeLists.txt  package.xml
dsr_control/config/: dsr_control.yaml
dsr_control/include/dsr_control/: dsr_hw_interface.h  dsr_rt_hw_interface.h  dsr_sim_hw_interface.h
dsr_control/launch/: dsr_control.launch  dsr_fake_control.launch  dsr_moveit.launch  dsr_rt_control.launch  dsr_sim_control.launch
dsr_control/src/: dsr_control_node.cpp  dsr_hw_interface.cpp  dsr_rt_control_node.cpp  dsr_rt_hw_interface.cpp  dsr_sim_control_node.cpp  dsr_sim_hw_interface.cpp
dsr_description/config/: macro.transmission.torque.xacro
dsr_description/launch/: dsr_description.launch  m0609_charger.launch
dsr_description/urdf/: m0609.urdf
dsr_description/xacro/: charger.urdf.xacro  m0609.urdf.xacro  m0609_collision.urdf  m0609_urdf.urdf  macro.m0609.white.torque.xacro  macro.m0609.white.xacro
dsr_example/py/: CMakeLists.txt  package.xml
dsr_example/roscpp/m0609_controller/: CMakeLists.txt  controller_plugins.xml  package.xml
dsr_example/roscpp/m0609_controller/config/: m0609_controller.yaml
dsr_example/roscpp/m0609_controller/include/: LieOperator.cpp  LieOperator.h  Trajectory.cpp  Trajectory.h
dsr_example/roscpp/m0609_controller/launch/: m0609_controller.launch
dsr_example/roscpp/m0609_controller/src/: PD_Gravity.cpp  main.cpp
dsr_gazebo/config/: doosan_robot_controller.yaml
dsr_gazebo/launch/: dsr_base.launch
dsr_launcher/launch/: dsr_moveit.launch  single_robot_gazebo.launch  single_robot_only.launch  single_robot_rviz_gazebo.launch
dsr_msgs/: CMakeLists.txt
dsr_msgs/msg/: AlterMotionStream.msg  JogMultiAxis.msg  RobotState.msg  RobotStateRT.msg  ServoJRTStream.msg  ServoJStream.msg  ServoLRTStream.msg  ServoLStream.msg  SpeedJRTStream.msg  SpeedJStream.msg  SpeedLRTStream.msg  SpeedLStream.msg  TorqueRTStream.msg
dsr_msgs/srv/aux_control/: GetCurrentPosj.srv  GetCurrentPosx.srv  GetCurrentRotm.srv  GetCurrentToolFlangePosx.srv  GetCurrentVelj.srv  GetCurrentVelx.srv  GetDesiredPosj.srv  GetDesiredPosx.srv  GetDesiredVelj.srv  GetDesiredVelx.srv  GetExternalTorque.srv  GetJointTorque.srv  GetOrientationError.srv  GetSolutionSpace.srv  GetToolForce.srv
dsr_msgs/srv/force/: AlignAxis1.srv  AlignAxis2.srv  CalcCoord.srv  CheckForceCondition.srv  CheckOrientationCondition1.srv  CheckOrientationCondition2.srv  CheckPositionCondition.srv  CoordTransform.srv  GetUserCartCoord.srv  GetWorkpieceWeight.srv  IsDoneBoltTightening.srv  OverwriteUserCartCoord.srv  ParallelAxis1.srv  ParallelAxis2.srv  ReleaseForce.srv  SetDesiredForce.srv  SetStiffnessx.srv  SetUserCartCoord1.srv  SetUserCartCoord2.srv  SetUserCartCoord3.srv  (+1 more)
dsr_sim_msgs/: CMakeLists.txt  package.xml
dsr_sim_msgs/msg/: JogMultiAxis.msg  RobotStateRT.msg  ServoJRTStream.msg  ServoJStream.msg  ServoLRTStream.msg  ServoLStream.msg  SpeedJRTStream.msg  SpeedJStream.msg  SpeedLRTStream.msg  SpeedLStream.msg  TorqueRTStream.msg
moveit_config_m0609/launch/: m0609.launch  moveit.rviz
(+121 files in other folders)
